# starbelly-python-client

./: .bish-index  .bish.sqlite  .gitignore  README.md  README.rst  pyproject.toml  setup.py
.github/: .bish.sqlite
docs/: .bish.sqlite  commandline.rst  conf.py  index.rst  installation.rst
docs/_build/doctrees/: commandline.doctree  configuration.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree  usage.doctree
docs/_build/html/: .buildinfo  commandline.html  configuration.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
starbelly/: __init__.py  client.py
starbelly_proto/: .bish-index  .bish.sqlite  __init__.py  client_pb2.py  server_pb2.py  shared_pb2.py  starbelly_pb2.py
starbelly_python_client/: .bish-index  .bish.sqlite  .env  cli.py  client.py
tests/: .bish-index  .bish.sqlite  test_starbelly_python_client.py
