[tool.poetry]
name = "starbelly-python-client"
version = "0.1.0"
description = ""
authors = ["Luke <Maxwell>"]
packages = [
    { include = "starbelly_proto" },
    { include = "starbelly_python_client" },
]

[tool.poetry.dependencies]
python = "^3.7"
trio = "^0.15.1"
trio-websocket = "^0.8.0"
protobuf = "^3.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint-protobuf = "^0.12"
rstcheck = "^3.3.1"
docutils = "^0.16"

[tool.poetry.scripts]
starbelly = "starbelly_python_client.cli:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
